--- a/en/mkdocs.yml
+++ b/en/mkdocs.yml
@@ -704,6 +704,10 @@ nav:
             - Expose a SOAP Service as a REST API: tutorials/expose-a-soap-service-as-a-rest-api.md
             - Edit an API by Modifying the API Definition: tutorials/edit-an-api-by-modifyng-the-api-definition.md
 
+# Hooks
+hooks:
+    - tools/version_hook.py
+
 # Extensions
 markdown_extensions:
     - admonition
