--- a/.github/workflows/queue_runner.yml
+++ b/.github/workflows/queue_runner.yml
@@ -22,6 +22,7 @@ jobs:
         run: |
           sudo apt-get update
           sudo apt-get install -y gh jq curl
+          
 
       - name: Pick next queued issue
         id: pick
@@ -64,5 +65,5 @@ jobs:
           gh issue edit $ISSUE --add-label "claude:in-progress"
 
           # Add trigger comment for ClaudeS
-          gh issue comment $ISSUE --body "@claude Please create a PR for this issue following repo conventions."
+          gh issue comment $ISSUE --body "@AI-Agent Please create a PR for this issue following repo conventions."
 
