Add config catalog configurations

--- a/en/tools/config-catalog-generator/data/apim.key_manager.toml
+++ b/en/tools/config-catalog-generator/data/apim.key_manager.toml
@@ -6,3 +6,4 @@ pool.init_idle_capacity = 50
 pool.max_idle = 100
 key_validation_handler_type = "custom"
 key_validation_handler_impl = "org.wso2.carbon.apimgt.keymgt.handlers.DefaultKeyValidationHandler"
+enable_application_scopes_for_resident_km = false
