--- a/en/tools/config-catalog-generator/data/configs.json
+++ b/en/tools/config-catalog-generator/data/configs.json
@@ -1079,6 +1079,14 @@
                             "default": "50",
                             "possible": "",
                             "description": "The maximum number of connections that will be created per host server by the client. Will have to increase this too, when required as similarly for the config max_total."
+                        },
+                        {
+                            "name": "enable_application_scopes_for_resident_km",
+                            "type": "boolean",
+                            "required": false,
+                            "default": "false",
+                            "possible": "true,false",
+                            "description": "Enable the application scopes for the Resident Key Manager."
                         }
                     ]
                 }
