--- a/.github/workflows/autolable.yml
+++ b/.github/workflows/autolable.yml
@@ -61,8 +61,7 @@ jobs:
                 # Add claude:queue label if a valid category is returned
                 if [[ "$CATEGORY" != "" && "$CATEGORY" != "null" && "$CATEGORY" != "none" ]]; then
                 echo "Adding claude:queue label"
-                gh issue edit $ISSUE_NUMBER --add-label "claude:queue"
-                gh issue edit $ISSUE_NUMBER --add-label "$CATEGORY"
+                gh issue edit $ISSUE_NUMBER --add-label "AI-Agent/Queued"
                 else
                 echo "No valid category returned. Not adding label."
                 fi
