--- a/en/mkdocs.yml
+++ b/en/mkdocs.yml
@@ -400,6 +400,7 @@ nav:
                 - OpenTelemetry: monitoring/observability/traces/monitoring-with-opentelemetry.md
             - Metrics:
                 - JMX-Based Monitoring: monitoring/observability/metrics/jmx-based-monitoring.md
+                - Prometheus for Monitoring: monitoring/observability/metrics/prometheus-for-monitoring.md
     - Reference:
         - Product REST APIs:
             - Overview: reference/product-apis/overview.md
