--- a/en/mkdocs.yml
+++ b/en/mkdocs.yml
@@ -517,6 +517,7 @@ nav:
                 - OpenTelemetry: observe/api-manager/traces/monitoring-with-opentelemetry.md
             - Metrics:
                 - JMX-Based Monitoring: observe/api-manager/metrics/jmx-based-monitoring.md
+                - Prometheus for Monitoring: observe/api-manager/metrics/prometheus-for-monitoring.md
         - Streaming Integrator Profile:
             - Getting Started: observe/streaming-integrator/setting-up-si-statistics-dashboards.md
             - Metrics:
