--- a/.github/workflows/queue_runner.yml
+++ b/.github/workflows/queue_runner.yml
@@ -65,5 +65,5 @@ jobs:
           gh issue edit $ISSUE --add-label "AI-Agent/In-Progress"
 
           # Add trigger comment for Claude
-          gh issue comment $ISSUE --body "@AI-Agent Please create a PR for this issue following repo conventions."
+          gh issue comment $ISSUE --body "@AI-Agent create a PR for this issue following repo conventions."
 
