--- a/.github/workflows/queue_runner.yml
+++ b/.github/workflows/queue_runner.yml
@@ -1,7 +1,7 @@
 name: Claude Queue Runner
 on:
-#   schedule:
-#     - cron: "*/1 * * * *" # every 1 minutes
+  schedule:
+    - cron: "*/5 * * * *" # every 5 minutes
   workflow_dispatch: {}
 
 concurrency:
@@ -11,9 +11,6 @@ concurrency:
 jobs:
   queue-runner:
     runs-on: ubuntu-latest
-    permissions:
-      issues: write
-      contents: read
     name: Process next issue in Claude queue
     steps:
       - uses: actions/checkout@v4
@@ -48,6 +45,9 @@ jobs:
 
           ISSUE_NUMBER=$(echo "$ISSUE_JSON" | jq -r .number)
           echo "issue_number=$ISSUE_NUMBER" >> $GITHUB_OUTPUT
+          echo "Upstream repository=${ORIGINAL_REPO}" >> $GITHUB_OUTPUT
+          echo "Forked Repository=${REPO_OWNER}/${REPO_NAME}" >> $GITHUB_OUTPUT
+          echo "Issue number=${ISSUE_NUMBER}" >> $GITHUB_OUTPUT
 
       - name: Exit if no queued issues
         if: steps.pick.outputs.issue_number == ''
