--- a/.github/workflows/auto_lable.yml
+++ b/.github/workflows/auto_lable.yml
@@ -27,7 +27,22 @@ jobs:
            echo "Sending issue to Claude for classification..."
 
             # Build JSON payload safely with jq to escape newlines/quotes
-            PROMPT="You are a GitHub issue classifier. Read the issue title and body carefully. Classify the issue into one of these categories: broken-links, spelling-mistakes, grammatical-errors, formatting-issues, none. Return ONLY the category name. And if the issue does not fit any category, return 'none'.
+            PROMPT="You are a GitHub issue classifier for documentation fixes. IMPORTANT: You can ONLY fix these specific types of issues:
+
+            1. broken-links - Links that are broken, dead, or pointing to wrong locations
+            2. spelling-mistakes - Spelling errors in documentation text
+            3. grammatical-errors - Grammar mistakes in documentation text  
+            4. formatting-issues - Documentation formatting problems like indentation errors, markdown formatting issues
+
+            CRITICAL RULES:
+            - Read the issue title and body VERY carefully
+            - If the issue is asking for suggestions, new features, adding content, or any improvements beyond the 4 categories above, return 'none'
+            - If the issue is requesting to add new documentation, sections, or content, return 'none'
+            - If the issue is about functionality, code changes, or feature requests, return 'none'
+            - ONLY return a category name if the issue is EXACTLY about fixing one of the 4 specific problems listed above
+            - When in doubt, return 'none'
+
+            Return ONLY the category name (broken-links, spelling-mistakes, grammatical-errors, formatting-issues) or 'none'.
     
             Title: $ISSUE_TITLE
             Body: $ISSUE_BODY"
