--- a/.github/workflows/queue_runner.yml
+++ b/.github/workflows/queue_runner.yml
@@ -1,7 +1,7 @@
 name: Claude Queue Runner
 on:
   schedule:
-    - cron: "*/20 * * * *" # every 20 minutes
+    - cron: "0 * * * *" # every hour (at minute 0 of every hour)
   workflow_dispatch: {}
 
 concurrency:
