--- a/.github/workflows/queue_runner.yml
+++ b/.github/workflows/queue_runner.yml
@@ -1,7 +1,7 @@
 name: Claude Queue Runner
 on:
   schedule:
-    - cron: "0 */3 * * *" 
+    - cron: "0 * * * *" 
   workflow_dispatch: {}
 
 concurrency:
