Add Kong Gateway documentation for Kubernetes deployment and API discovery

--- a/en/mkdocs.yml
+++ b/en/mkdocs.yml
@@ -267,11 +267,11 @@ nav:
                     - Deploy on AWS API Gateway: manage-apis/deploy-and-publish/federated-gateways/aws/deploy-on-aws-api-gateway.md
                     - Discover APIs on AWS API Gateway: manage-apis/deploy-and-publish/federated-gateways/aws/discover-apis-on-aws-api-gateway.md
                   - Kong:
-                    - Kong on Kubernetes:
-                        - Deploy on Kong Gateway on Kubernetes: manage-apis/deploy-and-publish/federated-gateways/kong/kong-on-kubernetes/deploy-on-kong-gateway-on-kubernetes.md
-                        - Discover APIs on Kong Gateway on Kubernetes: manage-apis/deploy-and-publish/federated-gateways/kong/kong-on-kubernetes/discover-apis-on-kong-gateway-on-kubernetes.md
-                    - Kong on VMs:
-                        - Discover APIs on Kong Gateway: manage-apis/deploy-and-publish/federated-gateways/kong/kong-on-vms/discover-apis-on-kong-gateway.md
+                    - Kong Kubernetes:
+                        - Deploy on Kong Gateway in Kubernetes: manage-apis/deploy-and-publish/federated-gateways/kong/kong-kubernetes/deploy-on-kong-gateway-in-kubernetes.md
+                        - Discover APIs on Kong Gateway in Kubernetes: manage-apis/deploy-and-publish/federated-gateways/kong/kong-kubernetes/discover-apis-on-kong-gateway-in-kubernetes.md
+                    - Kong Standalone:
+                        - Discover APIs on Kong Gateway: manage-apis/deploy-and-publish/federated-gateways/kong/kong-standalone/discover-apis-on-kong-gateway.md
                   - Configure a Custom Gateway Agent: manage-apis/deploy-and-publish/deploy-on-gateway/federated-gateways/configure-custom-gateway-agent.md
     - Consume APIs:
         - Consume APIs - Overview: consume/consume-api-overview.md
