--- a/.github/workflows/auto_lable.yml
+++ b/.github/workflows/auto_lable.yml
@@ -27,22 +27,26 @@ jobs:
            echo "Sending issue to Claude for classification..."
 
             # Build JSON payload safely with jq to escape newlines/quotes
-            PROMPT="You are a GitHub issue classifier for documentation fixes. IMPORTANT: You can ONLY fix these specific types of issues:
+            PROMPT="You are a GitHub issue classifier for documentation fixes. IMPORTANT: You can fix these specific types of issues:
 
             1. broken-links - Links that are broken, dead, or pointing to wrong locations
             2. spelling-mistakes - Spelling errors in documentation text
             3. grammatical-errors - Grammar mistakes in documentation text  
             4. formatting-issues - Documentation formatting problems like indentation errors, markdown formatting issues
+            5. suggestions - Documentation suggestions and improvements that include specific references or can be verified against project documentation for accuracy and validity
 
             CRITICAL RULES:
             - Read the issue title and body VERY carefully
-            - If the issue is asking for suggestions, new features, adding content, or any improvements beyond the 4 categories above, return 'none'
-            - If the issue is requesting to add new documentation, sections, or content, return 'none'
+            - For suggestions/improvements: Look for specific references, links, or documentation sources provided
+            - Verify any provided references and cross-check against official project documentation
+            - Implement solutions with high accuracy based on verified references
+            - If suggestions include invalid references or contradict existing documentation, they will be labeled as AI-Agent/Cannot-Fix
+            - If the issue is requesting to add completely new documentation sections without clear basis, return 'none'
             - If the issue is about functionality, code changes, or feature requests, return 'none'
-            - ONLY return a category name if the issue is EXACTLY about fixing one of the 4 specific problems listed above
+            - ONLY return a category name if the issue is EXACTLY about fixing one of the 5 specific problems listed above
             - When in doubt, return 'none'
 
-            Return ONLY the category name (broken-links, spelling-mistakes, grammatical-errors, formatting-issues) or 'none'.
+            Return ONLY the category name (broken-links, spelling-mistakes, grammatical-errors, formatting-issues, suggestions) or 'none'.
     
             Title: $ISSUE_TITLE
             Body: $ISSUE_BODY"
