--- a/en/docs/reference/product-apis/admin-apis/admin-v4/admin-v4.yaml
+++ b/en/docs/reference/product-apis/admin-apis/admin-v4/admin-v4.yaml
@@ -100,8 +100,8 @@ info:
     * Make sure you have an API Manager instance up and running.
     * Update the `basepath` parameter to match the hostname and port of the APIM instance.
      
-     <a href="../../../../../assets/attachments/reference/admin-v4.2-postman-collection.json"
-     download="WSO2 API Manager 4.4.0 Admin REST API.postman_collection.json"
+     <a href="../../../../../assets/attachments/reference/admin-v4.3-postman-collection.json"
+     download="WSO2 API Manager 4.5.0 Admin REST API.postman_collection.json"
      style="display: inline-block; padding: 10px 15px; color: white; background-color: #ef5b25; text-align: center; text-decoration: none; border-radius: 5px;font-weight: bold;">
      Download Postman Collection
      </a>
@@ -5023,7 +5023,7 @@ components:
           type: array
           items:
             type: string
-        IsJWTEnabledForLoginTokens:
+        IsJWTEnabledForLoginTokens: 
           type: boolean
           default: false
         keyManagerConfiguration:
@@ -6196,3 +6196,10 @@ components:
             apim:keymanagers_manage: Manage Key Managers
             apim:api_provider_change: Retrieve and manage applications
             apim:llm_provider_manage: Manage LLM Providers
+            apim:gov_policy_read: Retrieve governance policies
+            apim:gov_policy_manage: Manage governance policies
+            apim:gov_result_read: Retrieve governance results
+            apim:gov_rule_read: Retrieve governance rules
+            apim:gov_rule_manage: Manage governance rules
+            apim:organization_manage: Manage Organizations
+            apim:organization_read: Read Organizations
