--- a/en/docs/reference/product-apis/publisher-apis/publisher-v4/publisher-v4.yaml
+++ b/en/docs/reference/product-apis/publisher-apis/publisher-v4/publisher-v4.yaml
@@ -7609,7 +7609,7 @@ paths:
       x-code-samples:
         - lang: Curl
           source: 'curl -k -H "Authorization: Bearer ae4eae22-3f65-387b-a171-d37eaa366fa8"
-          -H "Content-Type: application/json" -X POST -d @data.json "https://localhost:9443/api/am/publisher/v4/me/organization-information"'
+          -H "Content-Type: application/json" -X GET -d @data.json "https://localhost:9443/api/am/publisher/v4/me/organization-information"'
  ######################################################
   # The "ExternalStore Collection" resource APIs
   ######################################################
@@ -14827,7 +14827,7 @@ components:
       name: apiId
       in: query
       description: |
-        **API ID** consisting of the **UUID** of the API**.
+        **API ID** consisting of the **UUID** of the API.
       required: true
       schema:
         type: string
@@ -15262,4 +15262,3 @@ components:
             apim:gov_policy_read: Retrieve governance policies
             apim:gov_result_read: Retrieve governance results
             apim:gov_rule_read: Retrieve governance rules
-            
