--- a/en/mkdocs.yml
+++ b/en/mkdocs.yml
@@ -19,7 +19,7 @@
 site_name: WSO2 API Manager Documentation
 site_description: Documentation for WSO2 API Manager
 site_author: WSO2
-site_url: https://apim.docs.wso2.com/en/latest/
+site_url: http://localhost:8000
 
 # Repository
 repo_name: wso2/docs-apim
